848.	[func]		fdupont
	Added truncated HMAC support to TSIG, as per RFC 4635.
	(Trac #3593, git ae3a9cd1a0d2dc07b7092368149381d69bc2c61a)

847.	[build]		fdupont
	Removed no longer used configuration option --with-shared-memory
	and associated files and variables.
	(Trac #3614, git adee8c93f7c7c1303390dd63dbeae74a48a34845)

846.	[bug]		fdupont
	Fixed subdir-objects warnings from recent versions of autotools,
	e.g., on Apple OSX.
	(Trac #3162, git e25c7477f3c35cdaa0f038732f697224bfd44847)

845.	[func]		marcin
	Implemented Host class for storing information about IPv4 and IPv6
	reservations for the host.
	(Trac #3560, git fb5e1883b01ce6388d1b7a92c61061b493c36713)

844.	[bug]		tmark, marcin
	Fixed multiple issues in the DHCP-DDNS unit tests.
	(Trac #3615, git fec824d36121b12e98dd407a0bdf1bc71c8de18d)

843.	[bug]		marcin
	DHCPv4 server sets ciaddr to 0 in DHCPOFFER and DHCPNAK messages to
	adhere to section 4.3.1 of RFC2131.
	(Trac #3367, git 9f05a29caa960df2b09b7a8c23100da8b40e73d0)

842.	[func]		marcin
	DHCPv4 server logs when the packet sent by the client contains
	invalid combination of giaddr/hops before discarding the packet.
	(Trac #3537, git 760c652b54dcdfdfbd1a0014da43d3c31e848f02)

841.	[func]		tomek
	Pkt4 and Pkt6 class have a common base now. A lot code duplication
	removed. Added getMAC() method that will be used to extract MAC
	in DHCPv6.
	(Trac #3546, git 6e68af7dfe15e4d461bf068f545d2bdaaa8fcfb0)

840.	[func]		nicolas
	PktFilterInet::send method now sets source IPv4 address explicitly.
	This enabled perfdhcp to control its source address on systems that have
	more than one address assigned to a given interface. Thanks to
	Nicolas Chaigneau from Capgemini for providing this fix.
	(Github #2, git 6ac36ed7a1d97bcf52ffb2aec7cbf116e58e5803)

839.	[doc]		adam
	DHCPv4 examples corrected in Kea ARM. Thanks to Adam Osuchowski
	from Silesian University of Technology for providing this fix.
	(Github #1, git 15785c0e28190659b037cfcca19f0267ccd9049f)

838.	[bug]		tomek